Add image signature config parameters to the default ppc kernel config

--- a/packages/linux-default-ppc.config
+++ b/packages/linux-default-ppc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32-rc4
-# Thu Oct 22 07:06:37 2009
+# Sat Jan  9 10:50:03 2010
 #
 # CONFIG_PPC64 is not set
 
@@ -79,6 +79,7 @@ CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_TASKSTATS is not set
 # CONFIG_AUDIT is not set
@@ -1150,6 +1151,9 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_U is not set
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_DLM is not set
+# CONFIG_IMAGE_SIGNATURE is not set
+# CONFIG_STRICT_EXEC_SIGNATURE is not set
+# CONFIG_IMAGE_SIGNATURE_DEBUG is not set
 # CONFIG_BINARY_PRINTF is not set
 
 #
