image signature parameters missing

--- a/packages/linux-default-x86_64.config
+++ b/packages/linux-default-x86_64.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32-rc4
-# Thu Feb 25 18:03:36 2010
+# Fri Mar  5 09:51:16 2010
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -2349,6 +2349,9 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
+# CONFIG_IMAGE_SIGNATURE is not set
+# CONFIG_STRICT_EXEC_SIGNATURE is not set
+# CONFIG_IMAGE_SIGNATURE_DEBUG is not set
 
 #
 # Kernel hacking
