--- a/packages/linux-i686.config
+++ b/packages/linux-i686.config
@@ -1375,6 +1375,7 @@ CONFIG_SERIAL_8250_MANY_PORTS=y
 CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_8250_DETECT_IRQ=y
 CONFIG_SERIAL_8250_RSA=y
+CONFIG_SERIAL_8250_UART_CLOCK=1843200
 
 #
 # Non-8250 serial port support
