Config param torture

--- a/packages/linux-default-x86_64.config
+++ b/packages/linux-default-x86_64.config
@@ -845,6 +845,7 @@ CONFIG_MISC_DEVICES=y
 # CONFIG_CB710_CORE is not set
 # CONFIG_PKTBUF is not set
 # CONFIG_ELOG is not set
+# CONFIG_QTKO is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
