--- a/packages/linux-qsp.config
+++ b/packages/linux-qsp.config
@@ -519,6 +519,7 @@ CONFIG_MISC_DEVICES=y
 # CONFIG_EEPROM_MAX6875 is not set
 # CONFIG_EEPROM_93CX6 is not set
 # CONFIG_ELOG is not set
+# CONFIG_QTKO is not set
 CONFIG_PKTBUF=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
