--- a/packages/linux-default-ppc.config
+++ b/packages/linux-default-ppc.config
@@ -2,6 +2,7 @@
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36-rc7
 # Wed Oct 27 14:49:59 2010
+# I think this file is not used at all (drb 8/31/2011)
 #
 # CONFIG_PPC64 is not set
 
