--- a/packages/linux-default-x86_64.config
+++ b/packages/linux-default-x86_64.config
@@ -2,6 +2,7 @@
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.36-rc7
 # Fri Oct 29 08:29:13 2010
+# I think this file is not used at all (drb 8/31/2011)
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
